--- a/app/src/main/res/layout/activity_pulau_isabela.xml
+++ b/app/src/main/res/layout/activity_pulau_isabela.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
             android:textColor="#ffffff"
+            android:textSize="20dp"
             android:layout_below="@+id/imageView2"
             android:layout_marginTop="20dp"
             android:layout_alignParentBottom="true" />
