--- a/app/src/main/res/layout/activity_pulau_wortel.xml
+++ b/app/src/main/res/layout/activity_pulau_wortel.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_pulau_love"
+    android:id="@+id/activity_pulau_wortel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:background="@drawable/summer"
-    tools:context="pulau.com.pulauterunik.PulauLove">
+    android:background="@drawable/bai"
+    tools:context="pulau.com.pulauterunik.PulauWortel">
 
     <RelativeLayout
         android:id="@+id/test1"
@@ -18,30 +17,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/vv"
-        android:id="@+id/imageButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Pulau Love"
-        android:textSize="30dp"
-        android:textColor="#ffffff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_marginRight="22dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/scroll"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vv"
+            android:id="@+id/imageButton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
-            android:text="Pulau unik ini terletak di bagian lepas pantai Kroasia, sebenarnya pulau ini bernama pulau Galesnjak namun banyak orang yang menyebutnya dengan “pulau cinta” karena bentuknya yang mirip dengan bentuk hati. Pulau yang satu ini merupakaan pulau pribadi yang tepatnya berada di laut Adriatik berdekatan dengan kota Turanj. Di pulau ini terdapat berbagai keindahan alam yang sangat bagus dan menjadi perhatian dunia karena bentuk pulaunya yang tidak biasa"
+            android:text="Pulau ini luar biasa diambil oleh fotografer Badruddeen ketika lepas landas dari Bandara Internasional Male, Maladewa. Dengan bentuk seperti wortel."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
@@ -57,12 +42,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:src="@drawable/hati"
+            android:src="@drawable/wortel"
             android:id="@+id/imageView2"
             android:layout_marginTop="65dp"
             android:layout_below="@+id/imageButton"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Pulau Berbentuk Wortel"
+            android:textSize="30dp"
+            android:textColor="#080808"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/imageButton"
+            android:layout_toEndOf="@+id/imageButton"
+            android:layout_marginLeft="21dp"
+            android:layout_marginStart="21dp" />
 
     </RelativeLayout>
 
