--- a/app/src/main/res/layout/activity_vulcan.xml
+++ b/app/src/main/res/layout/activity_vulcan.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_pulau_love"
+    android:id="@+id/activity_vulcan"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:background="@drawable/summer"
-    tools:context="pulau.com.pulauterunik.PulauLove">
+    android:background="@drawable/baba"
+    tools:context="pulau.com.pulauterunik.Vulcan">
 
     <RelativeLayout
         android:id="@+id/test1"
@@ -18,35 +17,36 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/vv"
-        android:id="@+id/imageButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Pulau Love"
-        android:textSize="30dp"
-        android:textColor="#ffffff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_marginRight="22dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/scroll"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/vv"
+            android:id="@+id/imageButton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
-            android:text="Pulau unik ini terletak di bagian lepas pantai Kroasia, sebenarnya pulau ini bernama pulau Galesnjak namun banyak orang yang menyebutnya dengan “pulau cinta” karena bentuknya yang mirip dengan bentuk hati. Pulau yang satu ini merupakaan pulau pribadi yang tepatnya berada di laut Adriatik berdekatan dengan kota Turanj. Di pulau ini terdapat berbagai keindahan alam yang sangat bagus dan menjadi perhatian dunia karena bentuk pulaunya yang tidak biasa"
+            android:text="Vulcan Island"
+            android:textSize="30dp"
+            android:textColor="#080808"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_marginRight="22dp"
+            android:layout_marginEnd="22dp"
+            android:layout_marginTop="15dp"
+            android:layout_below="@+id/scroll"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:text="
+Vulcan Island juga dikenal sebagai 'Inception Pulau', Pulau ini terletak di sebuah danau di kawah gunung berapi aktif, yang terletak di Luzon (sebuah pulau) di Filipina, yang terletak di Samudra Pasifik. Jadi Vulcan Island adalah sebuah pulau dalam danau, dalam sebuah pulau, dalam danau, dalam sebuah pulau di tengah samudra besar."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
-            android:textColor="#080808"
             android:textSize="20dp"
+            android:textColor="#080808"
             android:layout_marginTop="47dp"
             android:layout_below="@+id/imageView2"
             android:layout_alignParentLeft="true"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:src="@drawable/hati"
+            android:src="@drawable/vulcan"
             android:id="@+id/imageView2"
             android:layout_marginTop="65dp"
             android:layout_below="@+id/imageButton"
@@ -65,5 +65,4 @@
             android:layout_alignParentStart="true" />
 
     </RelativeLayout>
-
 </ScrollView>
